--- a/assets/css/payment.css
+++ b/assets/css/payment.css
@@ -2,37 +2,27 @@
 /* Main Content */
 
 main {
-  background: var(--bg-light);
+  background: #fff;
 }
 
 
 /* Payment Container */
 .container {
   display: flex;
-  /* max-width: 1200px; */
-  margin: 2rem auto;
-  /* background: #fff; */
-  /* border-radius: var(--radius-lg); */
   overflow: hidden;
-  /* box-shadow: var(--shadow-lg); */
-  /* transition: var(--transition); */
 }
-/* 
-.container:hover {
-  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.15);
-} */
 
 .form-section {
   flex: 3;
-  padding: 2.5rem;
-  background: white;
+  padding: 1.5rem;
+  background: var(--bg-light);
 }
 
 .summary {
   flex: 1;
   /* background: linear-gradient(135deg, #f0f9ff 0%, #e2f4f7 100%); */
-  padding: 2.5rem;
-  border-left: 1px solid var(--border-color);
+  padding: 1.5rem;
+  /* border-left: 1px solid var(--border-color); */
 }
 
 /* Form Elements */
@@ -63,7 +53,7 @@ h3 {
 
 .section-block {
   margin-bottom: 2rem;
-  padding: 1.5rem;
+  padding: 1rem;
   border-radius: var(--radius-md);
   background: white;
   transition: var(--transition);
@@ -145,7 +135,7 @@ input::placeholder {
 }
 
 .pay-btn {
-  background-color: var(--success);
+  background-color: var(--bg-dark);
   color: white;
   border: none;
   padding: 1rem;
@@ -163,7 +153,7 @@ input::placeholder {
 }
 
 .pay-btn:hover {
-  background-color: var(--success-light);
+  background-color: var(--primary);
   transform: translateY(-2px);
   box-shadow: var(--shadow-md);
 }
@@ -340,4 +330,36 @@ input[type="checkbox"] {
   width: auto;
   margin-right: 0.5rem;
   accent-color: var(--primary);
+}
+
+.modify-booking {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.add-booking, .remove-booking {
+    padding: 8px;
+    border-radius: 5px;
+    cursor: pointer;
+    border: none;
+    font-size: 13px;
+    transition: var(--transition);
+}
+
+.add-booking {
+    border: 1px solid var(--bg-dark);
+    color: var(--bg-dark);
+}
+
+.remove-booking {
+    background: rgba(255, 85, 85, 0.1);
+    border: 1px solid rgb(255, 85, 85);
+    color: rgb(255, 85, 85);
+}
+
+.add-booking:hover {
+    background: var(--bg-dark);
+    color: var(--bg-light);
 }
