--- a/assets/css/check-in.css
+++ b/assets/css/check-in.css
@@ -1,120 +1,1 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    color: rgb(38, 0, 255);
-    background-color: #f9f9f9;
-}
-
-header {
-    background-color: white(82, 82, 85);
-    color: white(255, 255, 255);
-    padding: 1em;
-    text-align: center;
-}
-
-header nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: space-between;
-}
-
-header nav ul li {
-    margin-right: 20px;
-}
-
-header nav a {
-    color:blue(255, 255, 255);
-    text-decoration: none;
-}
-
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2em;
-}
-
-.check-in {
-    background-color: #fafaff(0, 0, 0);
-    padding: 10%;
-    border: 1px solid #273467(122, 120, 120);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    
-}
-
-.check-in h1 {
-    margin-top: 0;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-label {
-    margin-bottom: 10px;
-} 
-input[type="text"] {
-    width: 210%;
-    height: 40px;
-    margin-bottom: 20px;
-    padding: 10px;
-    border: 1px solid #ccc;
-}
-
-input[type="submit"] {
-    width: 100%;
-    height: 40px;
-    background-color: rgb(19, 2, 250);
-    color: rgb(233, 232, 235);
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-input[type="submit"]:hover  {
-    background-color: rgb(84, 83, 92);
-}
-
-footer {
-    background-color: blue(49, 2, 255);
-    color: #fff;
-    padding: 1em;
-    text-align: center;
-    clear: both;
-}
-
-/* Responsive Design */
-
-@media only screen and (max-width: 780px) {
-    main {
-        flex-direction: column;
-        align-items: center;
-    }
-    .check-in {
-        width: 100%;
-        margin: 20px 0;
-    }
-}
-
-@media only screen and (max-width: 480px) {
-    header nav ul {
-        flex-direction: column;
-    }
-    header nav ul li {
-        margin-right: 0;
-        margin-bottom: 10px;
-    }
-}
-
-
+@import url('./style.css');
