--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,22 +1,24 @@
+@import url('./style.css');
+
 body {
   font-family: 'Segoe UI', sans-serif;
   background-color: #f2f6fa;
   margin: 0;
   padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
   min-height: 100vh;
 }
 
 .contact-container {
   margin-top: 50px;
   width: 100%;
-  max-width: 550px;
   padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .contact-form {
+  width: 50%;
   background-color: #ffffff;
   padding: 30px;
   border-radius: 10px;
@@ -26,7 +28,7 @@ body {
 .contact-form h2 {
   text-align: center;
   margin-bottom: 25px;
-  color: #0077cc;
+  color: var(--primary-color);
 }
 
 .form-block {
@@ -54,7 +56,7 @@ body {
 }
 
 .form-block button {
-  background-color: #0077cc;
+  background-color: var(--bg-dark);
   color: white;
   border: none;
   padding: 14px;
@@ -66,5 +68,5 @@ body {
 }
 
 .form-block button:hover {
-  background-color: #005fa3;
+  background-color: var(--primary);
 }
