--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -669,21 +669,25 @@ h1 {
   overflow: hidden;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  padding: 4px;
+  padding: 6px;
   cursor: pointer;
 }
 
-.flight-card:hover {
-  /* transform: translateY(-5px); */
-  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.12);
-}
 
 .flight-card img {
-border-radius: 8px;
-width: 100%;
-height: 180px;
-object-fit: cover;
-z-index: -10;
+  border-radius: 8px;
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  z-index: -10;
+}
+
+.flight-card:hover img {
+  transform: scale(1.01);
+
+  /* transform: translateY(-5px); */
+  /* box-shadow: 0 8px 25px rgba(0, 0, 0, 0.12); */
+  transition: all 0.7s ease-in-out;
 }
 
 .flight-text {
