--- a/assets/css/toast.css
+++ b/assets/css/toast.css
@@ -1,3 +1,5 @@
+@import url('./style.css');
+
 .toast {
   position: fixed;
   bottom: 20px;
@@ -28,7 +30,7 @@
 
 .toast i {
   font-size: 1.25rem;
-  color: var(--primary-color);
+  color: var(--primary);
 }
 
 .toast .message {
@@ -60,7 +62,7 @@
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: var(--primary-color);
+  background-color: var(--primary);
   animation: progress 3s linear forwards;
 }
 
